<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/priceTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pizzaTypeTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="27dp"
                android:text="@string/pizza_type_string"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pizzaTypeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/pizzaTypeTitleTV"
                app:layout_constraintTop_toBottomOf="@+id/pizzaTypeTitleTV" />

            <TextView
                android:id="@+id/doughTypeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/doughTypeTitleTV"
                app:layout_constraintTop_toBottomOf="@+id/doughTypeTitleTV" />

            <TextView
                android:id="@+id/toppingsTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/toppings_string"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/doughTypeTV"
                app:layout_constraintTop_toBottomOf="@+id/doughTypeTV" />

            <TextView
                android:id="@+id/toppingsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/toppingsTitleTV"
                app:layout_constraintTop_toBottomOf="@+id/toppingsTitleTV" />

            <TextView
                android:id="@+id/doughTypeTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/dough_type_string"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/pizzaTypeTV"
                app:layout_constraintTop_toBottomOf="@+id/pizzaTypeTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/orderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title_button_add_pizza_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/orderButton"
        app:layout_constraintEnd_toEndOf="@+id/orderButton" />

</androidx.constraintlayout.widget.ConstraintLayout>