<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/pizzaTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/pizza_title_string"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pizzaNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/pizzaTitleTV"
        app:layout_constraintStart_toEndOf="@+id/pizzaTitleTV"
        app:layout_constraintTop_toTopOf="@+id/pizzaTitleTV" />

    <TextView
        android:id="@+id/pizzaTypeTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pizza_type_string"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/pizzaTitleTV"
        app:layout_constraintTop_toBottomOf="@+id/pizzaTitleTV" />

    <TextView
        android:id="@+id/pizzaTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/pizzaTypeTitleTV"
        app:layout_constraintTop_toBottomOf="@+id/pizzaTypeTitleTV" />

    <TextView
        android:id="@+id/doughTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/doughTypeTitleTV"
        app:layout_constraintTop_toBottomOf="@+id/doughTypeTitleTV" />

    <TextView
        android:id="@+id/toppingsTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings_string"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/doughTypeTV"
        app:layout_constraintTop_toBottomOf="@+id/doughTypeTV" />

    <TextView
        android:id="@+id/toppingsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/toppingsTitleTV"
        app:layout_constraintTop_toBottomOf="@+id/toppingsTitleTV" />

    <TextView
        android:id="@+id/doughTypeTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dough_type_string"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/pizzaTypeTV"
        app:layout_constraintTop_toBottomOf="@+id/pizzaTypeTV" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLine"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/upperLine"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/editItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:contentDescription="edit the item order"
        app:layout_constraintBottom_toBottomOf="@+id/deleteItemButton"
        app:layout_constraintEnd_toStartOf="@+id/deleteItemButton"
        app:layout_constraintTop_toTopOf="@+id/deleteItemButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/deleteItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="delete the item order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>